# BILIBILI-Helper

./: README.md  app.py  bili_debug.py  pyproject.toml
static/: styles.css
templates/: base.html  index.html
